<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_column="3"
    android:padding="5dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent">

    <!--按键发送内容设置xml-->

    <TextView
        android:text="@string/key_dialog_text0"
        android:layout_row="0"
        android:layout_column="0"/>

    <EditText
        android:id="@+id/key_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:singleLine="true"
        android:maxLength="4"/>

    <TextView
        android:text="@string/key_dialog_text1"
        android:layout_row="1"
        android:layout_column="0"/>

    <EditText
        android:id="@+id/edit_short_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:singleLine="true"/>

    <TextView
        android:text="@string/key_dialog_text2"
        android:layout_row="2"
        android:layout_column="0"/>

    <EditText
        android:id="@+id/edit_long_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:singleLine="true"/>

    <TextView
        android:text="@string/key_dialog_text3"
        android:layout_row="3"
        android:layout_column="0"/>

    <EditText
        android:id="@+id/edit_release_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:singleLine="true"/>

</GridLayout>