<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:screenOrientation="landscape"
    tools:context=".activity.ActivityCv">

    <!--视觉控制界面，主要显示经opencv处理后的摄像头画面-->

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackGround">

        <!--android:scaleType="fitXY"-->

        <org.opencv.android.JavaCameraView
            android:id="@+id/cameraView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:camera_id="back"/>

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/cv_set_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="end"
        android:background="@color/colorTransparent">

        <LinearLayout
            android:layout_weight="0.6"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:orientation="vertical"
                android:gravity="bottom"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/battery_info"
                    android:textColor="@color/colorDarkGreen"
                    android:layout_marginLeft="5dp"
                    android:text="battery"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:layout_height="wrap_content">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="0.5"
                android:layout_height="0dp"
                android:layout_width="wrap_content">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cv_control_panel"
                android:layout_marginTop="35dp"
                android:layout_weight="0.1"
                android:layout_height="match_parent"
                android:layout_width="220dp"
                android:orientation="vertical"
                android:visibility="invisible"
                android:background="@color/colorTransparent">

                <RadioGroup
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:layout_width="match_parent"
                    android:gravity="center">

                    <TableRow>
                        <RadioButton
                            android:id="@+id/color_mode_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/color_mode_label"
                            android:textSize="16sp"
                            android:checked="true"
                            android:textColor="@color/colorWhite"/>
                        <RadioButton
                            android:id="@+id/face_mode_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/face_mode_label"
                            android:textSize="16sp"
                            android:textColor="@color/colorWhite"/>
                    </TableRow>

                </RadioGroup>

                <LinearLayout
                    android:id="@+id/color_bar_panel"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_height="0dp"
                        android:layout_weight="0.1"
                        android:layout_width="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vmin_label"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp"/>

                        <SeekBar
                            android:id="@+id/vmin_bar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxHeight="2dp"
                            android:max="256"
                            android:progress="110"
                            android:thumb="@drawable/seek_bar_thumb_white" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_height="0dp"
                        android:layout_weight="0.1"
                        android:layout_width="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vmax_label"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp"/>

                        <SeekBar
                            android:id="@+id/vmax_bar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxHeight="2dp"
                            android:max="256"
                            android:progress="256"
                            android:thumb="@drawable/seek_bar_thumb_white" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_height="0dp"
                        android:layout_weight="0.1"
                        android:layout_width="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/smin_label"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp"/>

                        <SeekBar
                            android:id="@+id/smin_bar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxHeight="2dp"
                            android:max="256"
                            android:progress="150"
                            android:thumb="@drawable/seek_bar_thumb_white" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_weight="0.1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/scale_label"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp"/>

                        <SeekBar
                            android:id="@+id/scale_bar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxHeight="2dp"
                            android:max="60"
                            android:progress="35"
                            android:thumb="@drawable/seek_bar_thumb_white" />

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/ver_text"
            android:layout_weight="0.1"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/colorForeGround"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:gravity="right"
            android:padding="2dp">

            <TextView
                android:layout_weight="0.4"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/pos_textview"
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/defult_pos"
                android:textSize="16sp"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:background="@color/colorTransparent"/>

            <Spinner
                android:id="@+id/dpi_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:outlineSpotShadowColor="@color/colorWhite">

            </Spinner>

            <CheckBox
                android:id="@+id/cap_cbox"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/colorWhite"
                android:text="@string/cap_label"
                android:layout_marginRight="10dp"
                android:textSize="16sp"/>

            <CheckBox
                android:id="@+id/cv_set_cbox"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:text="@string/set_label"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cv_selector_panel"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="visible">

            <android_opencv_api.CvSelector
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>